# TTPLab

./: .gitignore  CMakeLists.txt  README.MD  goo.json
include/structure/: DataFileName.h
meta/: CMakeLists.txt  meta.config  pred.cpp  train.cpp
meta/config/: {%Solution%}{%Project%}Config.h
meta/extractor/: ConverterDataTo{%Project%}Sample.h
meta/model/: {%Solution%}{%Project%}Model.h
meta/process/: Pred{%Solution%}{%Project%}.cpp  Pred{%Solution%}{%Project%}.h  Train{%Solution%}{%Project%}.cpp  Train{%Solution%}{%Project%}.h
meta/structure/: {%Project%}Sample.h
script/: newproject.sh
src/: CMakeLists.txt
src/common/: CMakeLists.txt  Const.h
src/common/extractor/: ConverterFileContextToWordEmb.h  ExtractorFileToWordEmb.h
src/common/model/: BaseLabelModel.h  BiLSTMModelBuilder.h  LSTMModelBuilder.h  LookupModelBuilder.h  SeqLabelModel.h
src/common/process/: LabelModelSGDSeqPredictor.h  LabelModelSGDSeqTrainer.h
src/common/structure/: DataWordEmb.h
